# hass-flatmate

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  compose.yml  hacs.json  repository.yaml
.github/workflows/: ci.yml  publish-app.yml
18/06b8dcb41e/: metadata.json
34/46e7aaafb1/: metadata.json
37/a75e0e193d/: metadata.json
47/ecd7d79303/: metadata.json
4c/0d53d39039/: metadata.json
55/77584e46cd/: metadata.json
66/e228789771/: metadata.json
69/1b9229226c/: metadata.json
7b/988d5c8a5e/: metadata.json
82/6572d5d557/: metadata.json
8e/07a6c93f60/: metadata.json
9f/f8145f17e4/: metadata.json
a3/a4ebf93e8a/: metadata.json
addon/hass_flatmate_service/: pyproject.toml  run.py
addon/hass_flatmate_service/app/: __init__.py  db.py  main.py  models.py  schemas.py  settings.py
addon/hass_flatmate_service/app/services/: cleaning.py  importer.py  members.py  shopping.py  snapshot.py
addon/hass_flatmate_service/hass_flatmate_service.egg-info/: SOURCES.txt
addon/hass_flatmate_service/tests/: test_cleaning_api.py  test_import_api.py  test_settings.py  test_shopping_api.py  test_snapshot_api.py
apps/hass_flatmate_service/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  config.yaml
c0/c75e3c59ab/: metadata.json
c6/96a63cce58/: metadata.json
cf/ac2a56f20a/: metadata.json
custom_components/hass_flatmate/: CHANGELOG.md  __init__.py  api.py  (+15 more)
dev/: Dockerfile.backend
docs/: ARCHITECTURE.md  INSTALLATION.md  TESTING.md
examples/: lovelace-flatmate-dashboard.yaml
scripts/: sync_app_service_src.sh
tests/: test_notify_resolution.py
(+158 files in other folders)
